# typeaxe

./: Cargo.toml  index.html
.github/workflows/: ci.yml  release.yaml
src/: lib.rs  loading.rs  main.rs  player.rs
src/actions/: mod.rs
todo/: gameplay_research.md
