[package]
name = "typeaxe"
version = "0.1.0"
publish = false
authors = ["SecretPocketCat"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.dist]
inherits = "release"
lto = true

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12.1" }
bevy_asset_loader = { version = "0.18", features = ["2d"] }
rand = "0.8.3"
webbrowser = { version = "0.8", features = ["hardened"] }
hexx = "0.12.0"
leafwing-input-manager = "0.11.2"
bevy_tweening = { git = "https://github.com/SecretPocketCat/bevy_tweening" }
paste = "1.0.14"
strum = { version = "0.25", features = ["derive"] }
bevy_editor_pls = "0.6.0"
bevy_trauma_shake = "0.1.0"
